# defense-news-classifier

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF.md  Jenkinsfile  README.md  pyproject.toml  pytest.ini  requirements-api.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: evals.yml  tests.yml
contracts/: classify-response.schema.json
data/: synthetic_articles.csv
data/corpus/: 001-ronald-reagan-carrier-strike-group-operates-with-j.txt  002-theodore-roosevelt-strike-group-operates-with-nimi.txt  003-nimitz-carrier-strike-group-operates-in-south-chin.txt  004-nimitz-carrier-strike-group-enters-5th-fleet.txt  005-nimitz-carrier-strike-group-deploys-will-conduct-m.txt  006-nimitz-carrier-strike-group-conducts-maritime-oper.txt  007-nimitz-carrier-strike-group-arrives-in-hawaii.txt  008-reagan-carrier-strike-group-enters-fifth-fleet.txt  009-ronald-reagan-carrier-strike-group-operates-in-the.txt  010-george-washington-carrier-strike-group-strengthens.txt  011-abraham-lincoln-carrier-strike-group-arrives-in-gu.txt  012-enterprise-carrier-strike-group-returns-from-middl.txt  013-ronald-reagan-carl-vinson-conduct-dual-carrier-str.txt  014-florida-returns-from-historic-submarine-deployment.txt  015-spc-3-aliyah-sharks-strengthens-missile-warning-an.txt  016-bringing-space-to-the-fight.txt  017-space-capabilities-vital-to-army-mdo.txt  018-space-development-agency-nd-congressional-leaders.txt  019-caoc-combat-ops-space-cell-defending-centcom-criti.txt  020-smdc-leader-gives-command-update-during-virtual-sy.txt  021-army-space-support-team-5-last-in-afghanistan.txt  022-261st-cos-ready-cyber-crew-conducts-threat-hunting.txt  023-cyberspace-reservists-lead-the-way-in-improving-pa.txt  024-arf-test-is-a-hypersonic-success.txt  025-reagan-test-site-successfully-supports-hypersonic.txt  026-army-and-navy-continue-tests-of-hypersonic-missile.txt  027-cadets-test-for-hypersonic-speeds-in-aero-wind-tun.txt  028-b-52-continues-mothership-role-during-hypersonic-t.txt  029-army-awards-contracts-to-accelerate-javelin-and-st.txt  030-contract-awarded-for-production-building-removal-a.txt  031-u-s-army-awards-expedited-production-contract-for.txt  032-pm-uas-awards-production-contract-for-long-range-r.txt  033-pm-uas-awards-production-contract-for-joint-autono.txt  034-dod-awards-navsup-wss-for-contracting-excellence.txt  035-multiple-river-dredging-contracts-awarded.txt  036-lrip-and-frp-contracts-awarded-for-the-integrated.txt  037-army-announces-contract-award-for-tow-weapon-syste.txt  038-multi-year-production-contract-award-for-the-army.txt  039-u-s-army-advances-accelerated-pac-3-mse-production.txt  040-army-accelerates-advances-manufacturing-with-contr.txt  (+26 more)
data/gold/: README.md  gold.csv
data/scale/: scale_set.csv
decisions/: 001-llm-provider.md  002-structured-output-via-tool-use.md  003-synthetic-data-only.md  004-no-ml-framework-for-eval.md  005-agentic-prompt-optimization-loop.md  006-autonomy-ladder-portfolio-spine.md  007-evals-as-ci-gate.md  008-strict-structured-outputs.md  009-message-batches-for-bulk-runs.md  010-rag-path-model-pin.md  011-reaim-tiered-routing-technology-operations.md  012-retire-bm25-grounding.md  013-decline-tiered-routing.md  014-region-field-design.md  015-public-domain-data-sourcing.md  README.md
docs/: CASE_STUDY.md  PRD.md  how-it-works.md  integration-testing.md
docs/notes/: classes-vs-functions.md  fastapi-walkthrough.md  project-notes.md  v2-kickoff.md
docs/specs/: autonomy-ladder.md  ml-baseline-bakeoff.md  prompt-optimization-loop.md
evals/: confusion_category.csv  confusion_domain.csv  error_audit.md  gold_confusion.md  gold_confusion_category.csv  gold_confusion_domain.csv  gold_confusion_v3.md  gold_confusion_v3_category.csv  gold_confusion_v3_domain.csv  gold_confusion_v3_region.csv  gold_eval.txt  gold_eval_v3.txt  gold_haiku_eval.txt  gold_haiku_predictions.csv  gold_predictions.csv  gold_predictions_v3.csv  gold_rag_baseline_predictions.csv  gold_rag_eval.txt  gold_rag_predictions.csv  metrics.json  metrics.txt  misclassifications.csv  predictions.csv  retrieval_error_analysis.md  route_eval.txt  route_runner_up_gold.csv  route_runner_up_scale.csv  scale_eval.txt  scale_predictions.csv  stability.txt  thresholds.toml
evals/optimize/: README.md  sample_dryrun_run.jsonl
notebooks/: eval_analysis.ipynb
scripts/: add_policy_gold.py  adr010_remeasure.py  build_gold.py  build_scale_set.py  cache_diagnostics.py  confirm_rag_grounding.py  fetch_corpus.py  gen_contract_schema.py  gen_metrics_artifact.py  gen_readme_metrics.py  lint_decisions.py  refresh_rag_baseline.py
src/: api.py  classify.py  classify_rag.py  consumer.py  eval.py  eval_confusion.py  eval_gate.py  generate.py  gold_eval.py  gold_eval_haiku.py  gold_eval_rag.py  optimize.py  retrieval_error_analysis.py  retrieve.py  route.py  route_eval.py  scale_eval.py  stability.py  telemetry.py
tests/: conftest.py  test_api.py  test_classify.py  test_classify_rag.py  test_consumer.py  test_consumer_integration.py  test_contract.py  test_contract_schema.py  test_eval.py  test_eval_confusion.py  test_eval_gate.py  test_generate.py  test_gold_eval.py  test_gold_eval_haiku.py  test_gold_eval_rag.py  test_metrics_artifact.py  test_optimize.py  test_retrieval_error_analysis.py  test_retrieve.py  test_route.py  test_route_eval.py  test_scale_eval.py  test_stability.py  test_telemetry.py
