[project]
name = "defense-news-classifier"
version = "2.0.0"
description = "Classifies public defense-related news snippets into a category and an operational domain using an LLM with structured output."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "pandas",
    "rank-bm25>=0.2.2",
    # Event-loop consumer (src/consumer.py): reads NoteCreated events and writes
    # tags back to notes-api over HTTP. kafka-python is pure-Python (keeps the image
    # lean); httpx is the writeback client (also pulled in transitively by anthropic).
    "kafka-python>=2.0",
    "httpx",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "uv",
    # Needed to import and test src/api.py (the FastAPI service). httpx (now a
    # runtime dep for the consumer) provides the TestClient transport. fastapi is a
    # serving dep (see requirements-api.txt) but the test suite needs it too.
    "fastapi",
    # Spins up a real Kafka broker in Docker for the consumer integration test
    # (tests/test_consumer_integration.py). Opt-in via `pytest --run-integration`;
    # needs Docker, so it's excluded from the default offline suite.
    "testcontainers[kafka]>=4.14.2",
]
# Optional analysis extras — installed with `uv sync --group notebook`.
notebook = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
]
ignore = [
    "E501",  # line too long — Black handles line length; strings/comments can't be auto-wrapped
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.uv]
# Keep the project lean: no build backend, this is a set of runnable scripts,
# not a published package.
package = false
