[project]
name = "defense-news-classifier"
version = "3.0.0"
description = "Classifies public defense-related news snippets into a category and an operational domain using an LLM with structured output."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "pandas",
    "rank-bm25>=0.2.2",
    # httpx is pulled in transitively by anthropic anyway; kept as a direct dep
    # because it also backs FastAPI's TestClient (see the dev group below).
    "httpx",
    # Observability: the classify() LLM call is instrumented against the OTel API
    # always; the SDK only records/exports when CLASSIFIER_TRACING is set (see
    # src/telemetry.py), mirroring the kb-agent tracing. API + SDK are core so the
    # no-op-when-disabled path works out of the box; the OTLP wire exporter is the
    # optional `otlp` extra below.
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
# Export spans to an OpenTelemetry collector over OTLP/HTTP. The console exporter
# (stderr) needs no infrastructure and is always available without this extra.
otlp = ["opentelemetry-exporter-otlp-proto-http>=1.20.0"]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "uv",
    # Needed to import and test src/api.py (the FastAPI service). httpx provides
    # the TestClient transport. fastapi and pydantic are serving deps (see
    # requirements-api.txt) but the test suite needs them too. pydantic is a
    # direct import in api.py, not just a fastapi transitive.
    "fastapi",
    "pydantic",
]
# Optional analysis extras — installed with `uv sync --group notebook`.
notebook = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "D",   # pydocstyle (docstring presence + Google-style formatting)
]
ignore = [
    "E501",  # line too long — Black handles line length; strings/comments can't be auto-wrapped
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test names are the documentation; docstrings are optional in tests.
"tests/**" = ["D1"]
# Analysis notebooks are exploratory; don't require docstrings on their cells.
"notebooks/**" = ["D1"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.uv]
# Keep the project lean: no build backend, this is a set of runnable scripts,
# not a published package.
package = false
